--- a/trabalhoFinal/TrabalhoFinal.ipynb
+++ b/trabalhoFinal/TrabalhoFinal.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,57 +42,588 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52.6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#randint(0,9)\n",
     "#x = dados.loc[2, 2]\n",
-    "x1 = dados.iloc[:,[1,randint(2,51),randint(2,51)]]\n",
-    "#x[0:398582, :]"
+    "x1 = dados.iloc[:,[1,randint(2,51),randint(2,51)]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "a=1\n",
-    "for i in x1.iloc[1:,0]:\n",
+    "a=0\n",
+    "y=[]\n",
+    "for i in x1.iloc[:,0]:\n",
     "    if i >= 0 and i<=20:\n",
-    "        x1.iloc[a,0]=1\n",
-    "    elif i >= 21 and i<=40:\n",
-    "        x1.iloc[a,0]=2\n",
-    "    elif i >= 41 and i<=60:\n",
-    "        x1.iloc[a,0]=3\n",
-    "    elif i >= 61 and i<=80:\n",
-    "        x1.iloc[a,0]=4\n",
-    "    elif i >= 81 and i<=100:\n",
-    "        x1.iloc[a,0]=5\n",
-    "    a=a+1"
+    "        y.append(1)\n",
+    "    elif i >20 and i<=40:\n",
+    "        y.append(2)\n",
+    "    elif i > 40 and i<=60:\n",
+    "        y.append(3)\n",
+    "    elif i > 60 and i<=80:\n",
+    "        y.append(4)\n",
+    "    elif i> 80 and i<=100:\n",
+    "         y.append(5)\n",
+    "    a=a+1\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "[[    0   963   855     0     0]\n",
+      " [    0  9154  9532     0     0]\n",
+      " [    0  8726 10848     0     0]\n",
+      " [    0  1647  2446     0     0]\n",
+      " [    0    45    68     0     0]]\n",
+      "\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          1       0.00      0.00      0.00      1818\n",
+      "          2       0.45      0.49      0.47     18686\n",
+      "          3       0.46      0.55      0.50     19574\n",
+      "          4       0.00      0.00      0.00      4093\n",
+      "          5       0.00      0.00      0.00       113\n",
+      "\n",
+      "avg / total       0.39      0.45      0.42     44284\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/breno/.local/lib/python2.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
    "source": [
-    "x1_treino = x.iloc[0:398582,1:]\n",
-    "x1_teste = x.iloc[398583:442867,1:]\n",
+    "x1_treino = x1.iloc[0:398582,1:]\n",
+    "x1_teste = x1.iloc[398583:442867,1:]\n",
     "\n",
-    "y1_treino=x1.iloc[0:398582,0]\n",
-    "y1_teste=x1.iloc[398583:442867,0]\n",
+    "y1_treino=y[0:398582]\n",
+    "y1_teste=y[398583:442867]\n",
+    "\n",
     "\n",
     "clf = MLPClassifier(alpha=0.01,max_iter=2000)\n",
-    "clf.fit(x1_treino, y1_treino)\n",
+    "clf.fit(x1_treino, y1_treino) \n",
+    "\n",
     "y1_previsto = clf.predict(x1_teste)\n",
     "\n",
     "print(\"\\n\")\n",
     "print(confusion_matrix(y1_teste,y1_previsto))  \n",
     "print(\"\\n\")\n",
-    "print(classification_report(y1_teste,y1_previsto))"
+    "print(classification_report(y1_teste,y1_previsto))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NT_GER</th>\n",
+       "      <th>CO_CATEGAD</th>\n",
+       "      <th>QE_I53</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>52.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>63.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>58.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>46.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>64.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>41.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>48.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>52.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>62.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>51.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>58.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>37.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>66.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>71.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>57.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>62.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>75.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>50.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>46.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>44.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>47.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>55.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>73.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>60.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>62.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>49.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>44.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>27.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442838</th>\n",
+       "      <td>43.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442839</th>\n",
+       "      <td>46.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442840</th>\n",
+       "      <td>48.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442841</th>\n",
+       "      <td>49.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442842</th>\n",
+       "      <td>63.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442843</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442844</th>\n",
+       "      <td>71.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442845</th>\n",
+       "      <td>59.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442846</th>\n",
+       "      <td>15.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442847</th>\n",
+       "      <td>44.7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442848</th>\n",
+       "      <td>30.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442849</th>\n",
+       "      <td>16.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442850</th>\n",
+       "      <td>66.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442851</th>\n",
+       "      <td>34.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442852</th>\n",
+       "      <td>71.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442853</th>\n",
+       "      <td>56.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442854</th>\n",
+       "      <td>45.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442855</th>\n",
+       "      <td>43.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442856</th>\n",
+       "      <td>68.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442857</th>\n",
+       "      <td>39.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442858</th>\n",
+       "      <td>69.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442859</th>\n",
+       "      <td>53.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442860</th>\n",
+       "      <td>15.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442861</th>\n",
+       "      <td>59.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442862</th>\n",
+       "      <td>42.7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442863</th>\n",
+       "      <td>35.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442864</th>\n",
+       "      <td>66.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442865</th>\n",
+       "      <td>70.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442866</th>\n",
+       "      <td>51.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442867</th>\n",
+       "      <td>52.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>442868 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        NT_GER  CO_CATEGAD  QE_I53\n",
+       "0         52.6           1     3.0\n",
+       "1         63.1           1     6.0\n",
+       "2         33.7           1     4.0\n",
+       "3         58.1           1     6.0\n",
+       "4         46.3           1     4.0\n",
+       "5         64.2           1     4.0\n",
+       "6         41.4           1     4.0\n",
+       "7         48.8           1     5.0\n",
+       "8         52.9           1     4.0\n",
+       "9         62.7           1     4.0\n",
+       "10        51.9           1     5.0\n",
+       "11        58.4           1     2.0\n",
+       "12        77.7           1     4.0\n",
+       "13        37.5           1     4.0\n",
+       "14        66.4           1     2.0\n",
+       "15        71.5           1     6.0\n",
+       "16        57.8           1     2.0\n",
+       "17        62.7           1     5.0\n",
+       "18        75.1           1     6.0\n",
+       "19        50.5           1     5.0\n",
+       "20        46.1           1     6.0\n",
+       "21        44.1           1     6.0\n",
+       "22        47.9           1     3.0\n",
+       "23        55.1           1     4.0\n",
+       "24        73.5           1     5.0\n",
+       "25        60.4           1     5.0\n",
+       "26        62.7           1     4.0\n",
+       "27        49.5           1     1.0\n",
+       "28        44.9           1     5.0\n",
+       "29        27.7           1     6.0\n",
+       "...        ...         ...     ...\n",
+       "442838    43.8           5     1.0\n",
+       "442839    46.9           5     8.0\n",
+       "442840    48.2           5     3.0\n",
+       "442841    49.6           5     2.0\n",
+       "442842    63.2           5     1.0\n",
+       "442843    31.9           5     1.0\n",
+       "442844    71.5           5     7.0\n",
+       "442845    59.6           5     3.0\n",
+       "442846    15.1           5     4.0\n",
+       "442847    44.7           5     1.0\n",
+       "442848    30.8           5     7.0\n",
+       "442849    16.3           5     2.0\n",
+       "442850    66.3           5     2.0\n",
+       "442851    34.9           5     7.0\n",
+       "442852    71.9           5     4.0\n",
+       "442853    56.0           5     5.0\n",
+       "442854    45.9           5     7.0\n",
+       "442855    43.3           5     6.0\n",
+       "442856    68.4           5     1.0\n",
+       "442857    39.3           5     7.0\n",
+       "442858    69.6           5     4.0\n",
+       "442859    53.8           5     2.0\n",
+       "442860    15.2           5     1.0\n",
+       "442861    59.8           5     1.0\n",
+       "442862    42.7           5     6.0\n",
+       "442863    35.6           5     5.0\n",
+       "442864    66.1           5     6.0\n",
+       "442865    70.2           5     6.0\n",
+       "442866    51.9           5     3.0\n",
+       "442867    52.8           5     4.0\n",
+       "\n",
+       "[442868 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('out.txt', 'w') as f:\n",
+    "    print('Filename:', filename, file=f)"
    ]
   },
   {
